<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Profile">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@drawable/shape_layout"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold|italic" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/shape_logo"
            android:contentDescription="@string/company_logo"
            android:src="@drawable/baseline_face_24" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/profile"
        android:textColor="@color/prussian_blue"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.017" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="480dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:id="@+id/llBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:text="@string/example_name"
                android:textColor="@color/prussian_blue"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:background="@drawable/shape_textview"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/email"
                    android:textColor="@color/white"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@drawable/shape_textview_border"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/example_email"
                    android:textColor="@color/prussian_blue"
                    android:textSize="20dp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:gravity="left"
                android:text="@string/phone"
                android:textColor="@color/prussian_blue"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/lapis_lazuli"
        android:orientation="horizontal"
        android:weightSum="12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageButton
            android:id="@+id/ibHome"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:layout_weight="4"
            android:background="@drawable/custom_button"
            android:contentDescription="@string/home"
            android:src="@drawable/baseline_home_24" />

        <ImageButton
            android:id="@+id/ibMessage"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:layout_weight="4"
            android:background="@drawable/custom_button"
            android:contentDescription="@string/message"
            android:src="@drawable/baseline_message_24" />

        <ImageButton
            android:id="@+id/ibProfile"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:layout_weight="4"
            android:background="@drawable/custom_button"
            android:contentDescription="@string/profile"
            android:src="@drawable/baseline_co_present_24" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>