<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Advertisements">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/shape_layout"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/shape_logo"
            android:contentDescription="@string/company_logo"
            android:src="@drawable/sale_car" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold|italic" />
    </LinearLayout>

    <ListView
        android:id="@+id/lvAdvertisement"
        android:layout_width="339dp"
        android:layout_height="545dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/lapis_lazuli"
        android:orientation="horizontal"
        android:weightSum="12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageButton
            android:id="@+id/ivHome"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:layout_weight="4"
            android:background="@drawable/custom_button"
            android:contentDescription="@string/home"
            android:src="@drawable/baseline_home_24" />

        <ImageButton
            android:id="@+id/ivMessage"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:layout_weight="4"
            android:background="@drawable/custom_button"
            android:contentDescription="@string/message"
            android:src="@drawable/baseline_message_24" />

        <ImageButton
            android:id="@+id/ivProfile"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:layout_weight="4"
            android:background="@drawable/custom_button"
            android:contentDescription="@string/profile"
            android:src="@drawable/baseline_co_present_24" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>